# Mountain-trail-guide

./: .gitignore  CMakeLists.txt  README.md  coverage.html  coverage.includes_Excursie.h.html  coverage.includes_Marcaj.h.html  coverage.includes_Meteo.h.html  coverage.includes_Strategy.h.html  coverage.includes_Traseu.h.html  coverage.includes_Traseu_marcat.h.html  coverage.includes_Traseu_nemarcat.h.html  coverage.main.cpp.html  coverage.sources_Excursie.cpp.html  coverage.sources_Marcaj.cpp.html  coverage.sources_Meteo.cpp.html  coverage.sources_Traseu.cpp.html  coverage.sources_Traseu_marcat.cpp.html  coverage.sources_Traseu_nemarcat.cpp.html  main.cpp  test.cpp
.github/workflows/: c-cpp.yml
1/: CMakeLists.txt  main.cpp
Proiect OOP/: CMakeLists.txt
files/: Marcaj.txt  Meteo.txt  Traseu.txt
includes/: Excursie.h  Marcaj.h  Meteo.h  Strategy.h  Traseu.h  Traseu_marcat.h  Traseu_nemarcat.h
sources/: Excursie.cpp  Marcaj.cpp  Meteo.cpp  Traseu.cpp  Traseu_marcat.cpp  Traseu_nemarcat.cpp
